--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,12 @@
 /*======================================
 //--//-->   STYLES GENERALES
 ======================================*/
-
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 body {
   background-color: #f5f5f5;
   color: #4e4e4e;
